--- a/easyventas/src/main/resources/application.properties
+++ b/easyventas/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/easyventas?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://34.69.179.77/easyventas?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=sa123
+spring.datasource.password=root123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
